Fixing bug 93513. Make window.open() use the base uri of the caller as the base, and not the document uri of the caller. r=danm@netscape.com, sr=rpotts@netscape.com